deployment.yaml
apiVersion: v1
kind: Service

metadata:
  name: test-sv
  namespace: test
spec:
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-dp
  namespace: test
spec:
  selector:
      matchLabels:
        app: test
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: test
          image: test:v0.0.1
          imagePullPolicy: Always
# COMPORTAMIENTO INTERNO          
          stdin: true
          tty: true
          command: ["yarn", "start"]
          ports:
            - containerPort: 3000

# RECURSOS Y LIMITES
          resources:
            requests:
              memory: "64Mi"
              cpu: "200m"
            limits:
              memory: "128Mi"
              cpu: "400m"
#VARIABLES DE AMBIENTE
