ingress-test.yaml

apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: test-in
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.localhost.com
    http:
      paths:
      - backend:
          serviceName: test-sv
          servicePort: 3000
        path: /
        pathType: ImplementationSpecific
